--- a/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -17,14 +17,7 @@
     <div class="row">
       <div class="sidebar col-lg-2 col-md-3">
         <h2>Wiki</h2>
-        <form>
-          <input
-            class="search"
-            type="text"
-            name="q"
-            placeholder="Search Encyclopedia"
-          />
-        </form>
+        {% block search%} {%endblock%}
         <div>
           <a href="{% url 'encyclopedia:index' %}">Home</a>
         </div>
