--- a/wiki/encyclopedia/templates/encyclopedia/index.html
+++ b/wiki/encyclopedia/templates/encyclopedia/index.html
@@ -2,13 +2,14 @@
 {%endblock %} {% block body %}
 <h1>All Pages</h1>
 
+{% for entry in entries %}
 <ul>
-  {% for entry in entries %}
-  <a href="{% url 'encyclopedia:display_content' entry %}">{{entry}}</a>
-  {% endfor %}
+  <li>
+    <a href="{% url 'encyclopedia:display_content' entry %}">{{entry}}</a>
+  </li>
 </ul>
+{% endfor %} {% endblock %} {%block search%}
 
-{% endblock %} {%block search%}
 <form action="{% url 'encyclopedia:index' %}" method="post">
   {% csrf_token %} {{search_form}}
   <input type="submit" />
