--- a/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -21,7 +21,7 @@
         <div>
           <a href="{% url 'encyclopedia:index' %}">Home</a>
         </div>
-        <div>Create New Page</div>
+        <div><a href="{% url 'encyclopedia:create_new_page'%}">Create New Page</a></div>
         <div>Random Page</div>
         {% block nav %} {% endblock %}
       </div>
