--- a/wiki/encyclopedia/templates/encyclopedia/content.html
+++ b/wiki/encyclopedia/templates/encyclopedia/content.html
@@ -1,6 +1,7 @@
 {% extends "encyclopedia/layout.html" %} {% block title %} {{title}}
 {%endblock%} {%block body%}
 
-<h1>{{content}}</h1>
+<p>{{content}}</p>
 
+<a href="{% url 'encyclopedia:edit_page' title %}">Edit Page</a>
 {%endblock%}
