--- a/wiki/encyclopedia/templates/encyclopedia/layout.html
+++ b/wiki/encyclopedia/templates/encyclopedia/layout.html
@@ -21,8 +21,12 @@
         <div>
           <a href="{% url 'encyclopedia:index' %}">Home</a>
         </div>
-        <div><a href="{% url 'encyclopedia:create_new_page'%}">Create New Page</a></div>
-        <div>Random Page</div>
+        <div>
+          <a href="{% url 'encyclopedia:create_new_page'%}">Create New Page</a>
+        </div>
+        <div>
+          <a href="{% url 'encyclopedia:random_entry' %}">Random Page</a>
+        </div>
         {% block nav %} {% endblock %}
       </div>
       <div class="main col-lg-10 col-md-9">{% block body %} {% endblock %}</div>
