--- a/wiki/encyclopedia/templates/encyclopedia/content.html
+++ b/wiki/encyclopedia/templates/encyclopedia/content.html
@@ -1,7 +1,7 @@
 {% extends "encyclopedia/layout.html" %} {% block title %} {{title}}
 {%endblock%} {%block body%}
 
-<p>{{content}}</p>
+<p>{{content|safe}}</p>
 
 <a href="{% url 'encyclopedia:edit_page' title %}">Edit Page</a>
 {%endblock%}
