Completed | Made some minor tweaking to code from last commit | Going to apply styling

--- a/wiki/encyclopedia/templates/encyclopedia/error.html
+++ b/wiki/encyclopedia/templates/encyclopedia/error.html
@@ -1,4 +1,4 @@
 {%extends 'encyclopedia/layout.html'%} {%block title%} Error {%endblock%}
 {%block body%}
-<h1>Error: Resquest Page, {{title}}, not found!</h1>
+<h1>Error: Title not found!</h1>
 {%endblock%}
